--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Plack-App-Catmandu-Bag
 
 {{$NEXT}}
+        - support HEAD requests
 
 0.01  2017-05-12 17:23:39 CEST
         - Initial release
